fix(dkh-crm): shift purchase contract date fields left

--- a/apps/dkh-crm/src/app/globals.css
+++ b/apps/dkh-crm/src/app/globals.css
@@ -442,19 +442,19 @@ a {
   }
 
   .print-delivery-date {
-    left: 148mm;
+    left: 143mm;
     top: 64.1mm;
     width: 47mm;
   }
 
   .print-customer-number {
-    left: 148mm;
+    left: 143mm;
     top: 79.9mm;
     width: 47mm;
   }
 
   .print-contract-date {
-    left: 148mm;
+    left: 143mm;
     top: 85.5mm;
     width: 47mm;
   }
